--- a/qlik_api_study.ipynb
+++ b/qlik_api_study.ipynb
@@ -17,11 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qlik_sdk import Apps, AuthType, Config"
+    "from qlik_sdk import Apps, AuthType, Config, Auth, Qlik\n",
+    "import os"
    ]
   },
   {
@@ -33,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"<MY_API_KEY>\"\n",
-    "base_url = \"<URL_TO_MY_TENANT>\" # E.g. https://foo.qlikcloud.eu.com"
+    "api_key = os.getenv('QLIK_CLOUD_API_KEY')\n",
+    "base_url = \"https://jmbenedetto.us.qlikcloud.com\""
    ]
   },
   {
@@ -64,42 +65,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0;31mInit signature:\u001b[0m\n",
-      "\u001b[0mAuthType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0;34m*\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mmodule\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mqualname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mstart\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDocstring:\u001b[0m      AuthType - represents a type of authentication\n",
-      "\u001b[0;31mFile:\u001b[0m           /usr/local/Caskroom/mambaforge/base/envs/qlikcloud/lib/python3.10/site-packages/qlik_sdk/auth_type.py\n",
-      "\u001b[0;31mType:\u001b[0m           EnumMeta\n",
-      "\u001b[0;31mSubclasses:\u001b[0m     \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#auth = Auth(Config(host=base_url, auth_type=AuthType.APIKey, api_key=api_key))\n",
     "\n",
-    "\n",
-    "auth = Auth(Config(host=base_url, auth_type=AuthType.APIKey, api_key=api_key))\n",
+    "qlik = Qlik(Config(host=base_url, auth_type=AuthType.APIKey, api_key=api_key))\n",
+    "user_me = qlik.users.get_me()\n",
     "\n",
     "# For REST calls: auth.rest\n",
     "# For RPC calls: auth.rpc"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NxApp(qType=None, qHandle=None, qGenericType=None, qGenericId=None, Global=None, attributes=NxAttributes(createdDate='2022-08-18T22:49:53.387Z', custom=JsonObject(), description='', dynamicColor='', encrypted=True, hasSectionAccess=False, id='e1f57751-87ea-4e3f-b82e-0ae47c29fd14', isDirectQueryMode=False, lastReloadTime='2022-09-11T00:33:52.618Z', modifiedDate='2022-09-11T00:33:59.982Z', name='finance_control', originAppId='', owner='auth0|b865c5e4bb5213e9a927ccd308a658eb8873088e4188bdc33f5b08bf823a8155', ownerId='62694a2aeb6530abc1079c65', publishTime='', published=False, thumbnail=''), create=[NxAppCreatePrivileges(canCreate=True, resource='sheet'), NxAppCreatePrivileges(canCreate=True, resource='bookmark'), NxAppCreatePrivileges(canCreate=True, resource='snapshot'), NxAppCreatePrivileges(canCreate=True, resource='story'), NxAppCreatePrivileges(canCreate=True, resource='dimension'), NxAppCreatePrivileges(canCreate=True, resource='measure'), NxAppCreatePrivileges(canCreate=True, resource='masterobject'), NxAppCreatePrivileges(canCreate=True, resource='variable')], privileges=['read', 'update', 'delete', 'reload', 'export', 'duplicate', 'change_owner', 'change_space', 'export_reduced', 'source'])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qlik.apps.get(\"e1f57751-87ea-4e3f-b82e-0ae47c29fd14\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -124,7 +127,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0aa835ccc5e7012f4ec4681d6a91ecce00e21eeb6657d234358613cc43c35bb3"
+    "hash": "e087c9512819afb3ca9a5a75d21f9cfc6ccd88a80405da3b4b6f66cdc03a230d"
    }
   }
  },
