--- a/qlik_api_study.ipynb
+++ b/qlik_api_study.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -65,9 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CustomException",
+     "evalue": "Missing config property: api_key",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCustomException\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#auth = Auth(Config(host=base_url, auth_type=AuthType.APIKey, api_key=api_key))\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m qlik \u001b[39m=\u001b[39m Qlik(Config(host\u001b[39m=\u001b[39;49mbase_url, auth_type\u001b[39m=\u001b[39;49mAuthType\u001b[39m.\u001b[39;49mAPIKey, api_key\u001b[39m=\u001b[39;49mapi_key))\n\u001b[1;32m      4\u001b[0m user_me \u001b[39m=\u001b[39m qlik\u001b[39m.\u001b[39musers\u001b[39m.\u001b[39mget_me()\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/qlikcloud/lib/python3.10/site-packages/qlik_sdk/qlik.py:102\u001b[0m, in \u001b[0;36mQlik.__init__\u001b[0;34m(self, config)\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, config: Config) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    101\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig \u001b[39m=\u001b[39m config\n\u001b[0;32m--> 102\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauth \u001b[39m=\u001b[39m Auth(config\u001b[39m=\u001b[39;49mconfig)\n\u001b[1;32m    103\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrest \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauth\u001b[39m.\u001b[39mrest\n\u001b[1;32m    104\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrpc \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauth\u001b[39m.\u001b[39mrpc\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/qlikcloud/lib/python3.10/site-packages/qlik_sdk/auth.py:100\u001b[0m, in \u001b[0;36mAuth.__init__\u001b[0;34m(self, config)\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, config: Config):\n\u001b[0;32m--> 100\u001b[0m     config\u001b[39m.\u001b[39;49mvalidate()\n\u001b[1;32m    101\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig \u001b[39m=\u001b[39m config\n\u001b[1;32m    102\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrest \u001b[39m=\u001b[39m RestClientInstance(RestClient(config))\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/qlikcloud/lib/python3.10/site-packages/qlik_sdk/config.py:26\u001b[0m, in \u001b[0;36mConfig.validate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauth_type \u001b[39m==\u001b[39m AuthType\u001b[39m.\u001b[39mAPIKey:\n\u001b[1;32m     25\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapi_key:\n\u001b[0;32m---> 26\u001b[0m         \u001b[39mraise\u001b[39;00m CustomException(\n\u001b[1;32m     27\u001b[0m             CustomExceptionMsg\u001b[39m.\u001b[39mMISSING_CONFIG_PROPERTY\u001b[39m.\u001b[39mvalue \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m: api_key\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     28\u001b[0m         )\n\u001b[1;32m     29\u001b[0m     allowed_keys \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mhost\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mauth_type\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mapi_key\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[1;32m     30\u001b[0m     \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__dict__\u001b[39m\u001b[39m.\u001b[39mkeys():\n",
+      "\u001b[0;31mCustomException\u001b[0m: Missing config property: api_key"
+     ]
+    }
+   ],
    "source": [
     "#auth = Auth(Config(host=base_url, auth_type=AuthType.APIKey, api_key=api_key))\n",
     "\n",
