--- a/List tenant objects.ipynb
+++ b/List tenant objects.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# GOAL\n",
-    "Understand Qlik Cloud APIs and their Python implementation"
+    "Export tanant objects to csv files."
    ]
   },
   {
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from qlik_sdk import Apps, AuthType, Config, Auth, Qlik\n",
     "import os\n",
-    "import json"
+    "import pandas as pd"
    ]
   },
   {
@@ -35,12 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = os.getenv('QLIK_CLOUD_API_KEY_JM')\n",
-    "base_url = \"https://jmbenedetto.us.qlikcloud.com\""
+    "api_key = os.getenv('QLIK_CLOUD_API_KEY_SVE')\n",
+    "tenant_name='sve.us'\n",
+    "base_url = \"https://\"+tenant_name+\".qlikcloud.com\""
    ]
   },
   {
@@ -52,75 +53,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def list_spaces(qlik_connection:Qlik):\n",
+    "    \"\"\"\n",
+    "    Generate a data frame with objects and required attributes.\n",
+    "    \"\"\"\n",
+    "    spaces=qlik_connection.spaces.get_spaces()\n",
+    "    return pd.DataFrame(\n",
+    "        [{'id':space.id,'name':space.name,'type':space.type} for space in spaces]\n",
+    "        )"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DATA WRANGLING"
+    "# SCRIPT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "auth = Auth(Config(host=base_url, auth_type=AuthType.APIKey, api_key=api_key))\n",
-    "\n",
     "qlik = Qlik(Config(host=base_url, auth_type=AuthType.APIKey, api_key=api_key))\n",
-    "user_me = qlik.users.get_me()\n",
-    "\n",
-    "# For REST calls: auth.rest\n",
-    "# For RPC calls: auth.rpc"
+    "#user_me = qlik.users.get_me()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List objects in tenant"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Spaces"
+    "## Spaces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spaces=qlik.spaces.get_spaces()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'Space'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m {spaces[\u001b[39m0\u001b[39m]}\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'Space'"
-     ]
-    }
-   ],
-   "source": [
-    "spaces[0]"
+    "spaces_file_name=f\"./data/out/{tenant_name}_spaces_{pd.Timestamp.now()}.csv\"\n",
+    "list_spaces(qlik).to_csv(spaces_file_name,index=False)"
    ]
   },
   {
