--- a/qlik_api_study.ipynb
+++ b/qlik_api_study.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "from qlik_sdk import Apps, AuthType, Config, Auth, Qlik\n",
     "import os\n",
-    "import json"
+    "import pandas as pd"
    ]
   },
   {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,23 +104,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'Space'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m {spaces[\u001b[39m0\u001b[39m]}\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'Space'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "628a97668c145a828f83cf23 Heritage\n",
+      "628edb644a69e5ae40c55235 La Totale\n",
+      "62c4c532b8a357be7affa78d Value Engineering\n"
      ]
     }
    ],
    "source": [
-    "spaces[0]"
+    "for space in spaces:\n",
+    "    print(space.id, space.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>628a97668c145a828f83cf23</td>\n",
+       "      <td>Heritage</td>\n",
+       "      <td>shared</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>628edb644a69e5ae40c55235</td>\n",
+       "      <td>La Totale</td>\n",
+       "      <td>shared</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>62c4c532b8a357be7affa78d</td>\n",
+       "      <td>Value Engineering</td>\n",
+       "      <td>shared</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         id               name    type\n",
+       "0  628a97668c145a828f83cf23           Heritage  shared\n",
+       "1  628edb644a69e5ae40c55235          La Totale  shared\n",
+       "2  62c4c532b8a357be7affa78d  Value Engineering  shared"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame([{'id':space.id,'name':space.name,'type':space.type} for space in spaces])"
    ]
   },
   {
